--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "url": "https://github.com/fac19/week4-harl/issues"
   },
   "homepage": "https://github.com/fac19/week4-harl#readme",
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "8.2.0",
+    "pg": "8.0.0"
+  },
   "devDependencies": {
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2",
