--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "node ./test.js | tap-spec",
+    "build-db": "node src/database/db_build.js",
     "start": "node server.js",
     "start:dev": "nodemon server.js"
   },
